优化界面 调整部分文本

--- a/CGSSGuide/ja.lproj/Main.strings
+++ b/CGSSGuide/ja.lproj/Main.strings
@@ -168,7 +168,7 @@
 "XW8-kK-Q8N.normalTitle" = "ゲーム内番号";
 
 /* Class = "UITableViewSection"; headerTitle = "筛选"; ObjectID = "XrL-IG-AMC"; */
-"XrL-IG-AMC.headerTitle" = "ソート";
+"XrL-IG-AMC.headerTitle" = "フィルタ";
 
 /* Class = "UIButton"; normalTitle = "Vocal"; ObjectID = "YOt-Q0-8lA"; */
 "YOt-Q0-8lA.normalTitle" = "Vocal";
@@ -231,7 +231,7 @@
 "gvK-S0-WhK.normalTitle" = "SSR+";
 
 /* Class = "UITableViewSection"; headerTitle = "筛选"; ObjectID = "hJn-41-ekr"; */
-"hJn-41-ekr.headerTitle" = "ソート";
+"hJn-41-ekr.headerTitle" = "フィルタ";
 
 /* Class = "UIButton"; normalTitle = "Visual"; ObjectID = "ipj-ta-j3r"; */
 "ipj-ta-j3r.normalTitle" = "Visual";
