继续优化翻译文本

--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -5,7 +5,7 @@
 "* 当期新SSR占全部SSR的40%\n* 未计算当期新SR、R的概率提高因素" = "* 当期新SSRはすべてSSRの40%であります\n* 当期新SR、Rの確率アップはみなされません";
 
 /* 队伍详情页面 */
-"* 极限和平均分数中所有点为Perfect评价\n* 极限分数中所有技能100%触发\n* 平均分数采用100次真实模拟后求平均值的方法，每次计算会略有不同\n* 平均分数没有计算技能触发率提升的队长技能带来的影响" = "* 極限・平均スコアは全PERFECTとして計算しています\n* 極限スコアはスキル100%発動として計算しています\n* 平均スコアは100回真実シミュレートして平均值を計算します、毎回の結果は異なります\n* 平均スコアは発動確率アップしたセンター効果の影響をみなされません";
+"* 极限和平均分数中所有点为Perfect评价\n* 极限分数中所有技能100%触发\n* 平均分数采用100次真实模拟后求平均值的方法，每次计算会略有不同\n* 平均分数没有计算技能触发率提升的队长技能带来的影响" = "* 極限・平均スコアは全PERFECTとして計算しています\n* 極限スコアはスキル100%発動として計算しています\n* 平均スコアは100回真実シミュレートして平均値を計算します、毎回の結果は異なります\n* 平均スコアは発動確率アップしたセンター効果の影響をみなされません";
 
 /* 设置页面 */
 "CGSSGuide问题反馈" = "CGSSGuideに関するフィードバック";
@@ -56,7 +56,7 @@
 "体重" = "体重";
 
 /* 队伍详情页面 */
-"使用固定值" = "固定值を使用";
+"使用固定值" = "固定アピールを使用";
 
 /* 底部弹出选项 */
 "保存到相册" = "アルバムへセーブ";
@@ -235,7 +235,7 @@
 "最大覆盖率%" = "最大ｶﾊﾞｰ率%";
 
 /* 角色信息页面 */
-"未付声" = "またなし";
+"未付声" = "なし";
 
 /* 生日提醒页面 */
 "未开启" = "オフ";
@@ -369,16 +369,16 @@
 "进化信息" = "特訓情報";
 
 /* 弹出框标题 */
-"选择Groove类别" = "Grooveタイプを選ぶ";
+"选择Groove类别" = "Grooveタイプを選んでください";
 
 /* 生日提醒页面 */
-"选择提醒时区" = "通知タイムゾーンを選ぶ";
+"选择提醒时区" = "通知タイムゾーンを選んでください";
 
 /* 弹出框标题 */
-"选择歌曲模式" = "LIVEモードを選ぶ";
+"选择歌曲模式" = "LIVEモードを選んでください";
 
 /* 底部弹出框标题 */
-"选择难度" = "難易度を選ぶ";
+"选择难度" = "難易度を選んでください";
 
 /* 导航栏按钮
    角色信息页面 */
