修正系统语言设置为繁体中文-台湾时, 部分本地化字符串不生效的额问题 歌曲筛选添加live parade模式

--- a/CGSSGuide/ja.lproj/Main.strings
+++ b/CGSSGuide/ja.lproj/Main.strings
@@ -334,3 +334,6 @@
 
 /* Class = "UINavigationItem"; title = "设置"; ObjectID = "zkd-c8-p78"; */
 "zkd-c8-p78.title" = "設定";
+
+/* Class = "UIButton"; normalTitle = "Live Parade"; ObjectID = "cRJ-kj-tNl"; */
+"cRJ-kj-tNl.normalTitle" = "Live Parade";
