增加一个耗时任务提醒框

--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-﻿/* 角色信息页面 */
+/* 角色信息页面 */
 "%d月%d日" = "%1$d月%2$d日";
 
 /* 模拟抽卡页面 */
@@ -435,4 +435,5 @@
 /* 技能类型 */
 "恢复生命" = "恢复生命";
 
-
+/* 耗时任务处理过程提示框 */
+"处理中..." = "处理中...";
