minor fix for ja localization

--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -74,10 +74,10 @@
 "出生地" = "出身地";
 
 /* 模拟抽卡页面 */
-"十连" = "10回引く";
+"十连" = "１０回引く";
 
 /* 模拟抽卡页面 */
-"单抽" = "1回引く";
+"单抽" = "１回引く";
 
 /* 模拟抽卡页面 */
 "卡池" = "ｶﾞｼｬ";
@@ -169,7 +169,7 @@
 
 /* 弹出框标题
    设置页面 */
-"提示" = "ヒント";
+"提示" = "ご注意";
 
 /* 弹出框正文 */
 "数据主版本过低，请点击确定开始更新" = "データバージョンが古かった。アップデートを行います。";
@@ -226,7 +226,7 @@
 "更新完成" = "アップデート完了";
 
 /* 更新框 */
-"更新数据中" = "ﾃﾞｰﾀ更新中";
+"更新数据中" = "データ更新中";
 
 /* 队伍编辑页面 */
 "替换" = "入り替え";
@@ -437,4 +437,4 @@
 
 /* new in 1.1.3 */
 /* 耗时任务处理过程提示框 */
-"处理中..." = "处理中...";
+"处理中..." = "プロセス中";
