--- a/CGSSGuide/zh-Hant-TW.lproj/Main.strings
+++ b/CGSSGuide/zh-Hant-TW.lproj/Main.strings
@@ -336,4 +336,4 @@
 "zkd-c8-p78.title" = "設定";
 
 /* Class = "UIButton"; normalTitle = "Live Parade"; ObjectID = "cRJ-kj-tNl"; */
-"cRJ-kj-tNl.normalTitle" = "Live Parade";
+"cRJ-kj-tNl.normalTitle" = "LIVE Parade";
