清除缓存时 进入二级菜单 细分具体清除内容

--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -311,7 +311,7 @@
 "缓存图片已被中止" = "画像キャッシュ中止した";
 
 /* 设置页面 */
-"缓存所有图片" = "すべての画像をキャッシュする";
+"缓存所有图片" = "画像をキャッシュする";
 
 /* 队伍编辑页面 */
 "编辑" = "編集";
@@ -438,3 +438,11 @@
 /* new in 1.1.3 */
 /* 耗时任务处理过程提示框 */
 "处理中..." = "プロセス中";
+
+/* 清除缓存时 选择具体的清除项 */
+"请等待更新完成或手动取消更新后，再尝试清除数据。" = "请等待更新完成或手动取消更新后，再尝试清除数据。";
+"全选" = "全选";
+"图片" = "图片";
+"卡片和歌曲" = "卡片和歌曲";
+"用户配置" = "用户配置";
+
