--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -437,3 +437,10 @@
 
 /* 耗时任务处理过程提示框 */
 "处理中..." = "处理中...";
+
+"请等待更新完成或手动取消更新后，再尝试清除数据。" = "请等待更新完成或手动取消更新后，再尝试清除数据。";
+"全选" = "全选";
+"图片" = "图片";
+"卡片和歌曲" = "卡片和歌曲";
+"用户配置" = "用户配置";
+
