--- a/CGSSGuide/zh-Hant.lproj/Localizable.strings
+++ b/CGSSGuide/zh-Hant.lproj/Localizable.strings
@@ -438,3 +438,10 @@
 
 /* 耗时任务处理过程提示框 */
 "处理中..." = "處理中...";
+
+/* 清除缓存时 选择具体的清除项 */
+"请等待更新完成或手动取消更新后，再尝试清除数据。" = "請等待更新完成或手動取消更新後，再嘗試清除資料。";
+"全选" = "全選";
+"图片" = "圖片";
+"卡片和歌曲" = "卡片和歌曲";
+"用户配置" = "使用者配置";
