--- a/CGSSGuide/en.lproj/Localizable.strings
+++ b/CGSSGuide/en.lproj/Localizable.strings
@@ -437,7 +437,7 @@
 "恢复生命" = "Healer";
 
 /* 耗时任务处理过程提示框 */
-"处理中..." = "Please wait...";
+"处理中..." = "Please wait";
 
 /* 清除缓存时 选择具体的清除项 */
 "请等待更新完成或手动取消更新后，再尝试清除数据。" = "Please wait for the update to complete before clearing the cache.";
