--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -2,8 +2,8 @@
 "%d月%d日" = "%1$d月%2$d日";
 
 /* 模拟抽卡页面 */
-"* 当期新SSR占全部SSR的40%\n* 未计算当期新SR、R的概率提高因素" = "* 当期新SSR占全部SSR的40%\n* 未计算当期新SR、R的概率提高因素";
-
+/* "* 当期新SSR占全部SSR的40%\n* 未计算当期新SR、R的概率提高因素" = "* 当期新SSR占全部SSR的40%\n* 未计算当期新SR、R的概率提高因素";
+ */
 /* 队伍详情页面 */
 "* 极限和平均分数中所有点为Perfect评价\n* 极限分数中所有技能100%触发\n* 平均分数采用100次真实模拟后求平均值的方法，每次计算会略有不同\n* 平均分数没有计算技能触发率提升的队长技能带来的影响" = "* 极限和平均分数中所有点为Perfect评价\n* 极限分数中所有技能100%触发\n* 平均分数采用100次真实模拟后求平均值的方法，每次计算会略有不同\n* 平均分数没有计算技能触发率提升的队长技能带来的影响";
 
