add birthday sorting for character info

--- a/CGSSGuide/en.lproj/Main.strings
+++ b/CGSSGuide/en.lproj/Main.strings
@@ -337,3 +337,5 @@
 
 /* Class = "UIButton"; normalTitle = "Live Parade"; ObjectID = "cRJ-kj-tNl"; */
 "cRJ-kj-tNl.normalTitle" = "LIVE Parade";
+
+"dqv-Ko-Qo8.normalTitle" = "Birthday";
