更新两处文字说明

--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -2,10 +2,9 @@
 "%d月%d日" = "%1$d月%2$d日";
 
 /* 模拟抽卡页面 */
-/* "* 当期新SSR占全部SSR的40%\n* 未计算当期新SR、R的概率提高因素" = "* 当期新SSR占全部SSR的40%\n* 未计算当期新SR、R的概率提高因素";
- */
+"* 每张卡片的获取几率和官方公布数据一致" = "* 每张卡片的获取几率和官方公布数据一致";
 /* 队伍详情页面 */
-"* 极限和平均分数中所有点为Perfect评价\n* 极限分数中所有技能100%触发\n* 平均分数采用100次真实模拟后求平均值的方法，每次计算会略有不同\n* 平均分数没有计算技能触发率提升的队长技能带来的影响" = "* 极限和平均分数中所有点为Perfect评价\n* 极限分数中所有技能100%触发\n* 平均分数采用100次真实模拟后求平均值的方法，每次计算会略有不同\n* 平均分数没有计算技能触发率提升的队长技能带来的影响";
+"* 极限和平均分数中所有点为Perfect评价\n* 极限分数中所有技能100%触发\n* 平均分数采用100次真实模拟后求平均值的方法，每次计算会略有不同\n* 平均分数没有计算技能触发率提升的队长技能带来的影响\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 极限和平均分数中所有点为Perfect评价\n* 极限分数中所有技能100%触发\n* 平均分数采用100次真实模拟后求平均值的方法，每次计算会略有不同\n* 平均分数没有计算技能触发率提升的队长技能带来的影响\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响";
 
 /* 设置页面 */
 "CGSSGuide问题反馈" = "CGSSGuide问题反馈";
