--- a/CGSSGuide/en.lproj/Localizable.strings
+++ b/CGSSGuide/en.lproj/Localizable.strings
@@ -3,11 +3,11 @@
 "%d月%d日" = "%1$d/%2$d";
 
 /* 模拟抽卡页面 */
-/* "* 当期新SSR占全部SSR的40%\n* 未计算当期新SR、R的概率提高因素" = "* Featured SSRs have a 40% chance to be picked\n* Increased rates are not taken into account for SR/Rs";
+"* 每张卡片的获取几率和官方公布数据一致" = "* Featured SSRs have a 40% chance to be picked\n* Increased rates are not taken into account for SR/Rs";
  */
 
 /* 队伍详情页面 */
-"* 极限和平均分数中所有点为Perfect评价\n* 极限分数中所有技能100%触发\n* 平均分数采用100次真实模拟后求平均值的方法，每次计算会略有不同\n* 平均分数没有计算技能触发率提升的队长技能带来的影响" = "* Simulation assumes all notes are Perfect.\n* Optimistic score assumes that skills always activate.\n* The average score is taken from 100 real simulations. Results will vary between calculations.\n* Center skills that affect the skill activation rate are not accounted for in the average score.";
+"* 极限和平均分数中所有点为Perfect评价\n* 极限分数中所有技能100%触发\n* 平均分数采用100次真实模拟后求平均值的方法，每次计算会略有不同\n* 平均分数没有计算技能触发率提升的队长技能带来的影响\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* Simulation assumes all notes are Perfect.\n* Optimistic score assumes that skills always activate.\n* The average score is taken from 100 real simulations. Results will vary between calculations.\n* Center skills that affect the skill activation rate are not accounted for in the average score.";
 
 /* 设置页面 */
 "CGSSGuide问题反馈" = "CGSSGuide Feedback";
