--- a/CGSSGuide/zh-Hant.lproj/Localizable.strings
+++ b/CGSSGuide/zh-Hant.lproj/Localizable.strings
@@ -3,9 +3,9 @@
 "%d月%d日" = "%1$d月%2$d日";
 
 /* 模拟抽卡页面 */
-"* 每张卡片的获取几率和官方公布数据一致" = "* 當期新SSR佔全部SSR的40%\n* 未計算當期新SR、R的概率提高因素";
+"* 每张卡片的获取几率和官方公布数据一致" = "每張卡片的獲取機率和官方公佈資料一致";
 /* 队伍详情页面 */
-"* 极限和平均分数中所有点为Perfect评价\n* 极限分数中所有技能100%触发\n* 平均分数采用100次真实模拟后求平均值的方法，每次计算会略有不同\n* 平均分数没有计算技能触发率提升的队长技能带来的影响\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 極限和平均分數中所有點為Perfect評價\n* 極限分數中所有技能100%觸發\n* 平均分數採用100次真實模擬後求平均值的方法，每次計算會略有不同\n* 平均分數沒有計算技能觸發率提升的隊長技能帶來的影響";
+"* 极限和平均分数中所有点为Perfect评价\n* 极限分数中所有技能100%触发\n* 平均分数采用100次真实模拟后求平均值的方法，每次计算会略有不同\n* 平均分数没有计算技能触发率提升的队长技能带来的影响\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 極限和平均分數中所有點為Perfect評價\n* 極限分數中所有技能100%觸發\n* 平均分數採用100次真實模擬後求平均值的方法，每次計算會略有不同\n* 平均分數沒有計算技能觸發率提升的隊長技能帶來的影響\n* 選取Groove模式或LIVE Parade模式時會自動忽略好友隊長的影響";
 
 /* 设置页面 */
 "CGSSGuide问题反馈" = "CGSSGuide問題反饋";
