add new localizable strings

--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -270,6 +270,7 @@
 /* 队伍详情页面 */
 "歌曲模式" = "LIVEモード";
 
+
 /* 卡片详情页 */
 "活动" = "イベント";
 
@@ -447,3 +448,9 @@
 "歌曲" = "楽曲";
 "用户配置" = "ユーザープロファイル";
 "需重启应用" = "アプリ再起動が必要";
+
+/* new in v1.1.5 */
+"复制" = "コピー"
+
+
+
