--- a/CGSSGuide/en.lproj/Localizable.strings
+++ b/CGSSGuide/en.lproj/Localizable.strings
@@ -453,3 +453,7 @@
 
 /* 全选的反义 */
 "全部取消" = "Deselect All";
+
+/* 数据更新时的错误提示 */
+"数据服务器存在异常，请您稍后再尝试更新。" = "The data server is down, please try again later.";
+
