Update Japanese translation

--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -26,7 +26,7 @@
 "三围" = "スリーサイズ";
 
 /* 下拉刷新文字 */
-"下拉检查更新" = "プルダウンでアップデート検査";
+"下拉检查更新" = "プルダウンで更新を検査";
 
 /* 通用, 通常不会出现, 为一些未知字符串预留 */
 "不明" = "不明";
@@ -90,7 +90,7 @@
 "后援数值" = "サポートアピール";
 
 /* 弹出框正文 */
-"因数据更新导致队伍数据不完整，建议等待当前更新完成，或尝试在卡片页面下拉更新数据。" = "データ更新によりユニットデータは不完全になった。現在進行中のアップデートをしばらくお待ちください、または手動アップデートを行ってください。";
+"因数据更新导致队伍数据不完整，建议等待当前更新完成，或尝试在卡片页面下拉更新数据。" = "データ更新によりユニットデータは不完全になった。現在進行中の更新をしばらくお待ちください、または手動更新を行ってください。";
 
 /* 设置页面
    通用 */
@@ -166,13 +166,13 @@
 "提示" = "ご注意";
 
 /* 弹出框正文 */
-"数据主版本过低，请点击确定开始更新" = "データバージョンが古かった。アップデートを行います。";
+"数据主版本过低，请点击确定开始更新" = "データが古かった、またはデータ初期ダウンロードが必要です。更新を行います。";
 
 /* 弹出框正文 */
-"数据存在新版本，推荐进行更新，请点击确定开始更新" = "データバージョンがアップデートできます。アップデートは推奨する。アップデートを行います。";
+"数据存在新版本，推荐进行更新，请点击确定开始更新" = "データが更新できます。更新は推奨します。更新を行います。";
 
 /* 更新框 */
-"数据是最新版本" = "データは最新バージョンです";
+"数据是最新版本" = "データバージョンは最新です";
 
 /* 致谢页面 */
 "数据来源：\nhttps://starlight.kirara.ca\nhttp://starlight.hyspace.io\nhttps://deresute.info\nhttps://hoshimoriuta.kirara.ca\nhttp://imascg-slstage-wiki.gamerch.com\n----------------------------------------\n技术支持：\nChieri\nCaiMiao\nstatementreply\nSnack-X\nsummertriangle-dev\n----------------------------------------\n封面设计：\nZXQ\n\n" = "データソース：\nhttps://starlight.kirara.ca\nhttp://starlight.hyspace.io\nhttps://deresute.info\nhttps://hoshimoriuta.kirara.ca\nhttp://imascg-slstage-wiki.gamerch.com\n----------------------------------------\nテクニカルサポート：\nChieri\nCaiMiao\nstatementreply\nSnack-X\nsummertriangle-dev\n----------------------------------------\nランディングカバーデザイン：\nZXQ\n\n";
@@ -181,7 +181,7 @@
 "数据缺失" = "データは不完全です";
 
 /* 弹出框标题 */
-"数据需要更新" = "データアップデート必要です";
+"数据需要更新" = "データ更新が必要です";
 
 /* 模拟抽卡页面 */
 "新卡列表" = "新アイドル";
@@ -202,7 +202,7 @@
 "时区" = "タイムゾーン";
 
 /* 队伍详情页面 */
-"时长" = "時間長さ";
+"时长" = "時間";
 
 /* 生日提醒页面 */
 "明天" = "明日";
@@ -217,7 +217,7 @@
 "暂无需要缓存的图片，请先尝试更新其他数据。" = "キャッシュされる必要の画像がありません。他のデータをアップデートお試しください。";
 
 /* 弹出框标题 */
-"更新完成" = "アップデート完了";
+"更新完成" = "更新完了";
 
 /* 更新框 */
 "更新数据中" = "データ更新中";
@@ -238,7 +238,7 @@
 "未找到有效的卡池数据，请尝试下拉刷新" = "有効なガシャデータは見つかりませんでした、プルダウンでリフレッシュお試しください";
 
 /* 设置页面 */
-"未设置邮箱账户" = "メールアカウント設定なし";
+"未设置邮箱账户" = "メールアカウント設定されない";
 
 /* 版权声明页面 */
 "本程序是非官方程序，所有本程序中使用的游戏相关数据版权所属为：\nBANDAI NAMCO Entertainment Inc.\n----------------------------------------\n本程序所使用的卡片、歌曲等数据来源于网络，其版权在不违反官方版权的前提下遵循提供者的版权声明。\n----------------------------------------\n本程序使用的第三方库\nSwiftyJson (MIT License)\nCopyright (c) 2014 Ruoyu Fu\nSDWebImage (MIT License)\nCopyright (c) 2016 Olivier Poitrey\nReachabilitySwift (MIT License)\nCopyright (c) 2016 Ashley Mills\nFMDB (MIT License)\nCopyright (c) 2008-2014 Flying Meat Inc.\nlz4 (BSD License)\nCopyright (c) 2011-2015, Yann Collet\n----------------------------------------\n本程序的所有界面、图标、非官方资源数据、代码基于MIT协议。\n如果对此项目感兴趣，请访问：\nhttps://github.com/superk589/CGSSGuide\n\n" = "このアプリはオフィシャルのものではない。すべて利用したデータの著作権の持つ主は以下でございます：\nBANDAI NAMCO Entertainment Inc.\n----------------------------------------\nアプリを利用したカード、楽曲などのデータはインターネットから得た、オフィシャルの著作権を違反しない限りソースの著作権声明を従う。\n----------------------------------------\nサードパーティーライブラリーの権利表記\nSwiftyJson (MIT License)\nCopyright (c) 2014 Ruoyu Fu\nSDWebImage (MIT License)\nCopyright (c) 2016 Olivier Poitrey\nReachabilitySwift (MIT License)\nCopyright (c) 2016 Ashley Mills\nFMDB (MIT License)\nCopyright (c) 2008-2014 Flying Meat Inc.\nlz4 (BSD License)\nCopyright (c) 2011-2015, Yann Collet\n----------------------------------------\nアプリのすべてのインターフェイス、アイコン、非公式データ、コードはMITライセンスを従う。\nソースコード：\nhttps://github.com/superk589/CGSSGuide\n\n";
@@ -253,10 +253,10 @@
 "查看角色详情" = "キャラ詳細";
 
 /* 更新框 */
-"检查更新中" = "アップデート検査中";
+"检查更新中" = "更新を検査中";
 
 /* 更新框 */
-"检查更新失败" = "アップデート検査失敗";
+"检查更新失败" = "更新検査失敗";
 
 /* No comment provided by engineer. */
 "歌曲名" = "曲名";
@@ -312,7 +312,7 @@
 "编辑" = "編集";
 
 /* 弹出框正文 */
-"缺少难度为%@的歌曲,建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。" = "難易度%@の楽曲が見つかりません。現在進行中のアップデートをしばらくお待ちください、または手動アップデートを行ってください。";
+"缺少难度为%@的歌曲,建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。" = "難易度%@の楽曲データが見つかりません。現在進行中の更新をしばらくお待ちください、または手動更新を行ってください。";
 
 /* 弹出框正文 */
 "获取到的live数据异常" = "取得したLIVEデータは異常です";
@@ -367,7 +367,7 @@
 "选择Groove类别" = "Grooveタイプを選んでください";
 
 /* 生日提醒页面 */
-"选择提醒时区" = "通知タイムゾーンを選んでください";
+"选择提醒时区" = "通知の時間帯を選んでください";
 
 /* 弹出框标题 */
 "选择歌曲模式" = "LIVEモードを選んでください";
@@ -435,7 +435,7 @@
 "处理中..." = "プロセス中";
 
 /* 清除缓存时 选择具体的清除项 */
-"请等待更新完成或手动取消更新后，再尝试清除数据。" = "現在進行中のアップデートをしばらくお待ちください、または手動でアップデートをキャンセルの後で、再びデータをクリアしてください";
+"请等待更新完成或手动取消更新后，再尝试清除数据。" = "現在進行中の更新をしばらくお待ちください、または手動で更新をキャンセルの後で、再びデータをクリアしてください";
 "全选" = "全選択";
 "图片" = "画像";
 "卡片" = "カード";
@@ -447,13 +447,13 @@
 "复制" = "コピー";
 
 /* 全选的反义 */
-"全部取消" = "全部取消";
+"全部取消" = "全非選択";
 
 /* 数据更新时的错误提示 */
-"数据服务器存在异常，请您稍后再尝试更新。" = "数据服务器存在异常，请您稍后再尝试更新。";
+"数据服务器存在异常，请您稍后再尝试更新。" = "データサーバーは異常があります。しばらくお待ちして、再び更新してください。";
 
 /* 模拟抽卡页面 */
-"* 每张卡片的获取几率和官方公布数据一致" = "* 当期新SSRはすべてSSRの40%であります\n* 当期新SR、Rの確率アップはみなされません";
+"* 每张卡片的获取几率和官方公布数据一致" = "* カードごとの提供割合は公式が主張した確率と一致してます";
 
 /* 队伍详情页面 */
 "* 极限和平均分数中所有点为Perfect评价\n* 极限分数中所有技能100%触发\n* 平均分数采用100次真实模拟后求平均值的方法，每次计算会略有不同\n* 平均分数没有计算技能触发率提升的队长技能带来的影响\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 極限・平均スコアは全PERFECTとして計算しています\n* 極限スコアはスキル100%発動として計算しています\n* 平均スコアは100回真実シミュレートして平均値を計算します、毎回の結果は異なります\n* 平均スコアはセンター効果による特技発動確率アップをみなされません";
