--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -456,5 +456,5 @@
 "* 每张卡片的获取几率和官方公布数据一致" = "* カードごとの提供割合は公式が主張した確率と一致してます";
 
 /* 队伍详情页面 */
-"* 极限和平均分数中所有点为Perfect评价\n* 极限分数中所有技能100%触发\n* 平均分数采用100次真实模拟后求平均值的方法，每次计算会略有不同\n* 平均分数没有计算技能触发率提升的队长技能带来的影响\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 極限・平均スコアは全PERFECTとして計算しています\n* 極限スコアはスキル100%発動として計算しています\n* 平均スコアは100回真実シミュレートして平均値を計算します、毎回の結果は異なります\n* 平均スコアはセンター効果による特技発動確率アップをみなされません";
+"* 极限和平均分数中所有点为Perfect评价\n* 极限分数中所有技能100%触发\n* 平均分数采用100次真实模拟后求平均值的方法，每次计算会略有不同\n* 平均分数没有计算技能触发率提升的队长技能带来的影响\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 極限・平均スコアは全PERFECTとして計算しています\n* 極限スコアはスキル100%発動として計算しています\n* 平均スコアは100回真実シミュレートして平均値を計算します、毎回の結果は異なります\n* 平均スコアはセンター効果による特技発動確率アップをみなされません\n* GrooveまたはLIVE Paradeのモードを設定した時、ゲストが無視にしています";
 
