:recycle: Update Japanese translation

--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -17,16 +17,16 @@
 "Pa曲" = "Pa曲";
 
 /* 生日提醒页面 */
-"一个月内" = "１か月内";
+"一个月内" = "1ヶ月以内";
 
 /* 生日提醒页面 */
-"七天内" = "一周内";
+"七天内" = "一週間以内";
 
 /* 角色信息页面 */
 "三围" = "スリーサイズ";
 
 /* 下拉刷新文字 */
-"下拉检查更新" = "プルダウンで更新を検査";
+"下拉检查更新" = "プルダウンで更新の確認";
 
 /* 通用, 通常不会出现, 为一些未知字符串预留 */
 "不明" = "不明";
@@ -50,7 +50,7 @@
 "体重" = "体重";
 
 /* 队伍详情页面 */
-"使用固定值" = "固定アピールを使用";
+"使用固定值" = "固定アピール値を使用";
 
 /* 底部弹出选项 */
 "保存到相册" = "アルバムに保存";
@@ -90,7 +90,8 @@
 "后援数值" = "サポートアピール";
 
 /* 弹出框正文 */
-"因数据更新导致队伍数据不完整，建议等待当前更新完成，或尝试在卡片页面下拉更新数据。" = "データ更新によりユニットデータは不完全になった。現在進行中の更新をしばらくお待ちください、または手動更新を行ってください。";
+"因数据更新导致队伍数据不完整，建议等待当前更新完成，或尝试在卡片页面下拉更新数据。" = "データ更新(削除)の影響でユニットデータが破損しました。現在進行中の更新が終わるのをお待ち下さい。または、手動で更新を行ってください。";
+
 
 /* 设置页面
    通用 */
@@ -110,7 +111,7 @@
 "完成" = "完了";
 
 /* 设置页面 */
-"将会清除所有缓存的图片、卡片、歌曲数据。除非数据出现问题，不建议使用此选项。" = "すべての画像、カード、および楽曲データをクリアしています。動作が問題ない限り、クリア操作はお勧めしない。";
+"将会清除所有缓存的图片、卡片、歌曲数据。除非数据出现问题，不建议使用此选项。" = "すべての画像、カード、および楽曲データを削除します。動作に問題が無い限り、データの削除は非推奨です。";
 
 /* 卡片详情页 */
 "属性排名" = "ステータス順位";
@@ -150,7 +151,7 @@
 "成功" = "成功";
 
 /* 设置页面 */
-"所有图片总计超过400MB，请检查您的网络环境或剩余流量，确认无误后再点击确定。" = "すべて画像のサイズ合計400MB以上です。ネット回線環境またはデータ余量を誤りなしで確認して、進んでください。";
+"所有图片总计超过400MB，请检查您的网络环境或剩余流量，确认无误后再点击确定。" = "画像のサイズは合計で400MB以上です。wifi環境またはモバイルデータ通信量の残量を確認して、進んでください。";
 
 /* 设置页面 */
 "打开邮箱失败" = "fail to open mail";
@@ -166,10 +167,10 @@
 "提示" = "ご注意";
 
 /* 弹出框正文 */
-"数据主版本过低，请点击确定开始更新" = "データが古かった、またはデータ初期ダウンロードが必要です。更新を行います。";
+"数据主版本过低，请点击确定开始更新" = "データが古い、またはデータの初回ダウンロードが必要です。更新を行います。";
 
 /* 弹出框正文 */
-"数据存在新版本，推荐进行更新，请点击确定开始更新" = "データが更新できます。更新は推奨します。更新を行います。";
+"数据存在新版本，推荐进行更新，请点击确定开始更新" = "新しいデータを確認しました。更新を行います。";
 
 /* 更新框 */
 "数据是最新版本" = "データバージョンは最新です";
@@ -181,7 +182,7 @@
 "数据缺失" = "データは不完全です";
 
 /* 弹出框标题 */
-"数据需要更新" = "データ更新が必要です";
+"数据需要更新" = "データの更新が必要です";
 
 /* 模拟抽卡页面 */
 "新卡列表" = "新アイドル";
@@ -214,7 +215,7 @@
 "普池" = "通常ガシャ";
 
 /* 设置页面 */
-"暂无需要缓存的图片，请先尝试更新其他数据。" = "キャッシュされる必要の画像がありません。他のデータをアップデートお試しください。";
+"暂无需要缓存的图片，请先尝试更新其他数据。" = "キャッシュが必要な画像はありません。データの更新を試してみてください。";
 
 /* 弹出框标题 */
 "更新完成" = "更新完了";
@@ -235,13 +236,13 @@
 "未开启" = "オフ";
 
 /* 模拟抽卡页面 */
-"未找到有效的卡池数据，请尝试下拉刷新" = "有効なガシャデータは見つかりませんでした、プルダウンでリフレッシュお試しください";
+"未找到有效的卡池数据，请尝试下拉刷新" = "有効なガシャデータは見つかりませんでした、プルダウンでデータを更新し直してください。";
 
 /* 设置页面 */
-"未设置邮箱账户" = "メールアカウント設定されない";
+"未设置邮箱账户" = "メールアカウントが設定されていません";
 
 /* 版权声明页面 */
-"本程序是非官方程序，所有本程序中使用的游戏相关数据版权所属为：\nBANDAI NAMCO Entertainment Inc.\n----------------------------------------\n本程序所使用的卡片、歌曲等数据来源于网络，其版权在不违反官方版权的前提下遵循提供者的版权声明。\n----------------------------------------\n本程序使用的第三方库\nSwiftyJson (MIT License)\nCopyright (c) 2014 Ruoyu Fu\nSDWebImage (MIT License)\nCopyright (c) 2016 Olivier Poitrey\nReachabilitySwift (MIT License)\nCopyright (c) 2016 Ashley Mills\nFMDB (MIT License)\nCopyright (c) 2008-2014 Flying Meat Inc.\nlz4 (BSD License)\nCopyright (c) 2011-2015, Yann Collet\n----------------------------------------\n本程序的所有界面、图标、非官方资源数据、代码基于MIT协议。\n如果对此项目感兴趣，请访问：\nhttps://github.com/superk589/CGSSGuide\n\n" = "このアプリはオフィシャルのものではない。すべて利用したデータの著作権の持つ主は以下でございます：\nBANDAI NAMCO Entertainment Inc.\n----------------------------------------\nアプリを利用したカード、楽曲などのデータはインターネットから得た、オフィシャルの著作権を違反しない限りソースの著作権声明を従う。\n----------------------------------------\nサードパーティーライブラリーの権利表記\nSwiftyJson (MIT License)\nCopyright (c) 2014 Ruoyu Fu\nSDWebImage (MIT License)\nCopyright (c) 2016 Olivier Poitrey\nReachabilitySwift (MIT License)\nCopyright (c) 2016 Ashley Mills\nFMDB (MIT License)\nCopyright (c) 2008-2014 Flying Meat Inc.\nlz4 (BSD License)\nCopyright (c) 2011-2015, Yann Collet\n----------------------------------------\nアプリのすべてのインターフェイス、アイコン、非公式データ、コードはMITライセンスを従う。\nソースコード：\nhttps://github.com/superk589/CGSSGuide\n\n";
+"本程序是非官方程序，所有本程序中使用的游戏相关数据版权所属为：\nBANDAI NAMCO Entertainment Inc.\n----------------------------------------\n本程序所使用的卡片、歌曲等数据来源于网络，其版权在不违反官方版权的前提下遵循提供者的版权声明。\n----------------------------------------\n本程序使用的第三方库\nSwiftyJson (MIT License)\nCopyright (c) 2014 Ruoyu Fu\nSDWebImage (MIT License)\nCopyright (c) 2016 Olivier Poitrey\nReachabilitySwift (MIT License)\nCopyright (c) 2016 Ashley Mills\nFMDB (MIT License)\nCopyright (c) 2008-2014 Flying Meat Inc.\nlz4 (BSD License)\nCopyright (c) 2011-2015, Yann Collet\n----------------------------------------\n本程序的所有界面、图标、非官方资源数据、代码基于MIT协议。\n如果对此项目感兴趣，请访问：\nhttps://github.com/superk589/CGSSGuide\n\n" = "このアプリは公式のものではありません。利用している全てのデータの著作権は以下の持ち主のものです。：\nBANDAI NAMCO Entertainment Inc.\n----------------------------------------\nアプリに利用したカード、楽曲などのデータはインターネットから取得しています。公式の著作権に違反しない限り、ソースコードの著作権を保有します。\n----------------------------------------\nサードパーティーライブラリーの権利表記\nSwiftyJson (MIT License)\nCopyright (c) 2014 Ruoyu Fu\nSDWebImage (MIT License)\nCopyright (c) 2016 Olivier Poitrey\nReachabilitySwift (MIT License)\nCopyright (c) 2016 Ashley Mills\nFMDB (MIT License)\nCopyright (c) 2008-2014 Flying Meat Inc.\nlz4 (BSD License)\nCopyright (c) 2011-2015, Yann Collet\n----------------------------------------\nアプリのすべてのインターフェイス、アイコン、非公式データ、コードはMITライセンスでライセンスされています。\nソースコード：\nhttps://github.com/superk589/CGSSGuide\n\n";
 
 /* 队伍详情页面 */
 "极限分数" = "極限スコア";
@@ -253,10 +254,10 @@
 "查看角色详情" = "キャラ詳細";
 
 /* 更新框 */
-"检查更新中" = "更新を検査中";
+"检查更新中" = "更新を確認中";
 
 /* 更新框 */
-"检查更新失败" = "更新検査失敗";
+"检查更新失败" = "更新に失敗";
 
 /* No comment provided by engineer. */
 "歌曲名" = "曲名";
@@ -312,7 +313,7 @@
 "编辑" = "編集";
 
 /* 弹出框正文 */
-"缺少难度为%@的歌曲,建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。" = "難易度%@の楽曲データが見つかりません。現在進行中の更新をしばらくお待ちください、または手動更新を行ってください。";
+"缺少难度为%@的歌曲,建议等待当前更新完成，或尝试下拉歌曲列表手动更新数据。" = "難易度%@の楽曲データが見つかりません。現在進行中の更新が終わるのをお待ち下さい。または、手動で更新を行ってください。";
 
 /* 弹出框正文 */
 "获取到的live数据异常" = "取得したLIVEデータは異常です";
@@ -432,16 +433,16 @@
 
 /* new in 1.1.3 */
 /* 耗时任务处理过程提示框 */
-"处理中..." = "プロセス中";
+"处理中..." = "計算中";
 
 /* 清除缓存时 选择具体的清除项 */
-"请等待更新完成或手动取消更新后，再尝试清除数据。" = "現在進行中の更新をしばらくお待ちください、または手動で更新をキャンセルの後で、再びデータをクリアしてください";
+"请等待更新完成或手动取消更新后，再尝试清除数据。" = "現在進行中の更新が終わるまでお待ち下さい。または、手動で更新をキャンセルした後、再びデータを削除してください";
 "全选" = "全選択";
 "图片" = "画像";
 "卡片" = "カード";
 "歌曲" = "楽曲";
 "用户配置" = "ユーザープロファイル";
-"需重启应用" = "アプリ再起動が必要";
+"需重启应用" = "アプリの再起動が必要";
 
 /* new in v1.1.5 */
 "复制" = "コピー";
@@ -450,11 +451,11 @@
 "全部取消" = "全非選択";
 
 /* 数据更新时的错误提示 */
-"数据服务器存在异常，请您稍后再尝试更新。" = "データサーバーは異常があります。しばらくお待ちして、再び更新してください。";
+"数据服务器存在异常，请您稍后再尝试更新。" = "データサーバーに異常があります。しばらく待ってから再び更新してください。";
 
 /* 模拟抽卡页面 */
 "* 每张卡片的获取几率和官方公布数据一致" = "* カードごとの提供割合は公式が主張した確率と一致してます";
 
 /* 队伍详情页面 */
-"* 极限和平均分数中所有点为Perfect评价\n* 极限分数中所有技能100%触发\n* 平均分数采用100次真实模拟后求平均值的方法，每次计算会略有不同\n* 平均分数没有计算技能触发率提升的队长技能带来的影响\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 極限・平均スコアは全PERFECTとして計算しています\n* 極限スコアはスキル100%発動として計算しています\n* 平均スコアは100回真実シミュレートして平均値を計算します、毎回の結果は異なります\n* 平均スコアはセンター効果による特技発動確率アップをみなされません\n* GrooveまたはLIVE Paradeのモードを設定した時、ゲストが無視にしています";
+"* 极限和平均分数中所有点为Perfect评价\n* 极限分数中所有技能100%触发\n* 平均分数采用100次真实模拟后求平均值的方法，每次计算会略有不同\n* 平均分数没有计算技能触发率提升的队长技能带来的影响\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 極限・平均スコアは全PERFECTとして計算しています\n* 極限スコアはスキル100%発動として計算しています\n* 平均スコアは100回シミュレートを行い平均値を計算しているため、結果は毎回異なります\n* 平均スコアはセンター効果による特技発動確率アップの影響を受けていません\n* GrooveまたはLIVE Paradeのモードを設定した時、ゲストは無視しています。";
 
