--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -455,3 +455,9 @@
 /* 数据更新时的错误提示 */
 "数据服务器存在异常，请您稍后再尝试更新。" = "数据服务器存在异常，请您稍后再尝试更新。";
 
+/* new in v1.2.0 */
+"捐赠" = "捐赠";
+"CGSSGuide是一款免费应用，现在以及未来都不会增加任何需要收费开启的功能，也不会加入任何影响您使用的广告。CGSSGuide的开发和后端服务器的维护需要您的支持，如果您喜欢这款应用，请支持我们。" = "CGSSGuide是一款免费应用，现在以及未来都不会增加任何需要收费开启的功能，也不会加入任何影响您使用的广告。CGSSGuide的开发和后端服务器的维护需要您的支持，如果您喜欢这款应用，请支持我们。";
+"捐赠的钱款将用在什么地方？" = "捐赠的钱款将用在什么地方？";
+"您的捐赠将用于CGSSGuide所使用的后端服务器费用，域名使用费用，开发者账号费用，以及服务器未来升级所需费用。" = "您的捐赠将用于CGSSGuide所使用的后端服务器费用，域名使用费用，开发者账号费用，以及服务器未来升级所需费用。";
+"如果您不便于捐赠，也可以通过点击下方的广告来支持我们。" = "如果您不便于捐赠，也可以通过点击下方的广告来支持我们。";
