--- a/CGSSGuide/en.lproj/Localizable.strings
+++ b/CGSSGuide/en.lproj/Localizable.strings
@@ -457,3 +457,9 @@
 /* 队伍详情页面 */
 "* 极限和平均分数中所有点为Perfect评价\n* 极限分数中所有技能100%触发\n* 平均分数采用100次真实模拟后求平均值的方法，每次计算会略有不同\n* 平均分数没有计算技能触发率提升的队长技能带来的影响\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* Simulation assumes all notes are Perfect.\n* Optimistic score assumes that skills always activate.\n* The average score is taken from 100 real simulations. Results will vary between calculations.\n* Center skills that affect the skill activation rate are not accounted for in the average score.\n* In Groove or LIVE Parade mode, the partner's leader is ignored automatically.";
 
+/* new in v1.2.0 */
+"捐赠" = "捐赠";
+"CGSSGuide是一款免费应用，现在以及未来都不会增加任何需要收费开启的功能，也不会加入任何影响您使用的广告。CGSSGuide的开发和后端服务器的维护需要您的支持，如果您喜欢这款应用，请支持我们。" = "CGSSGuide是一款免费应用，现在以及未来都不会增加任何需要收费开启的功能，也不会加入任何影响您使用的广告。CGSSGuide的开发和后端服务器的维护需要您的支持，如果您喜欢这款应用，请支持我们。";
+"捐赠的钱款将用在什么地方？" = "捐赠的钱款将用在什么地方？";
+"您的捐赠将用于CGSSGuide所使用的后端服务器费用，域名使用费用，开发者账号费用，以及服务器未来升级所需费用。" = "您的捐赠将用于CGSSGuide所使用的后端服务器费用，域名使用费用，开发者账号费用，以及服务器未来升级所需费用。";
+"如果您不便于捐赠，也可以通过点击下方的广告来支持我们。" = "如果您不便于捐赠，也可以通过点击下方的广告来支持我们。";
