--- a/CGSSGuide/en.lproj/Main.strings
+++ b/CGSSGuide/en.lproj/Main.strings
@@ -339,3 +339,6 @@
 "cRJ-kj-tNl.normalTitle" = "LIVE Parade";
 
 "dqv-Ko-Qo8.normalTitle" = "Birthday";
+
+// new in 1.2.0
+"MIJ-2r-FVJ.text" = "Donation";
