use ZKDrawerController to show filter and sort controller

--- a/CGSSGuide/en.lproj/Localizable.strings
+++ b/CGSSGuide/en.lproj/Localizable.strings
@@ -465,3 +465,9 @@
 "您的捐赠将用于CGSSGuide所使用的后端服务器费用，域名使用费用，开发者账号费用，以及服务器未来升级所需费用。" = "The donation will be used at server costs, domain name costs, developer account costs, and server updating costs.";
 "您也可以通过点击下方的广告来支持我们。" = "Click the ad. to support us.";
 "您的设备未开启应用内购买。" = "Your device do not allow in-app purchasing";
+
+"已收藏" = "已收藏";
+"未收藏" = "未收藏";
+"更新时间" = "更新时间";
+"稀有度" = "稀有度";
+"相册编号" = "相册编号";
