--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -463,3 +463,12 @@
 "您的捐赠将用于CGSSGuide所使用的后端服务器费用，域名使用费用，开发者账号费用，以及服务器未来升级所需费用。" = "您的捐赠将用于CGSSGuide所使用的后端服务器费用，域名使用费用，开发者账号费用，以及服务器未来升级所需费用。";
 "您也可以通过点击下方的广告来支持我们。" = "您也可以通过点击下方的广告来支持我们。";
 "您的设备未开启应用内购买。" = "您的设备未开启应用内购买。";
+
+"已收藏" = "已收藏";
+"未收藏" = "未收藏";
+"更新时间" = "更新时间";
+"稀有度" = "稀有度";
+"相册编号" = "相册编号";
+
+"降序" = "降序";
+"升序" = "升序";
