--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -468,3 +468,8 @@
 "您也可以通过点击下方的广告来支持我们。" = "您也可以通过点击下方的广告来支持我们。";
 "您的设备未开启应用内购买。" = "您的设备未开启应用内购买。";
 
+"已收藏" = "已收藏";
+"未收藏" = "未收藏";
+"更新时间" = "更新时间";
+"稀有度" = "稀有度";
+"相册编号" = "相册编号";
