--- a/CGSSGuide/zh-Hant.lproj/Localizable.strings
+++ b/CGSSGuide/zh-Hant.lproj/Localizable.strings
@@ -465,3 +465,8 @@
 "您也可以通过点击下方的广告来支持我们。" = "您也可以通過點選下方的廣告來支援我們。";
 "您的设备未开启应用内购买。" = "您的裝置未開啟應用內購買。";
 
+"已收藏" = "已收藏";
+"未收藏" = "未收藏";
+"更新时间" = "更新时间";
+"稀有度" = "稀有度";
+"相册编号" = "相册编号";
