--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -473,3 +473,14 @@
 "更新时间" = "更新时间";
 "稀有度" = "稀有度";
 "相册编号" = "相册编号";
+
+"降序" = "降序";
+"升序" = "升序";
+"筛选" = "筛选";
+"排序" = "排序";
+
+"常规歌曲" = "常规歌曲";
+"传统活动" = "传统活动";
+"Groove活动" = "Groove活动";
+"最大难度" = "最大难度";
+
