char info into drawer

--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -479,3 +479,14 @@
 "传统活动" = "传统活动";
 "Groove活动" = "Groove活动";
 "最大难度" = "最大难度";
+
+"已付声" = "已付声";
+"未付声" = "未付声";
+"年龄" = "年龄";
+"未知" = "未知";
+"血型" = "血型";
+"身高" = "身高";
+"体重" = "体重";
+"五十音" = "五十音";
+"游戏编号" = "游戏编号";
+"生日" = "生日";
