--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -468,19 +468,29 @@
 "您也可以通过点击下方的广告来支持我们。" = "您也可以通过点击下方的广告来支持我们。";
 "您的设备未开启应用内购买。" = "您的设备未开启应用内购买。";
 
-"已收藏" = "已收藏";
-"未收藏" = "未收藏";
-"更新时间" = "更新时间";
-"稀有度" = "稀有度";
-"相册编号" = "相册编号";
+"已收藏" = "ブクマした";
+"未收藏" = "ブクマしない";
+"更新时间" = "アップデート時間";
+"稀有度" = "レア度";
+"相册编号" = "アルバム順";
 
 "降序" = "降序";
 "升序" = "升序";
-"筛选" = "筛选";
-"排序" = "排序";
+"筛选" = "フィルタ";
+"排序" = "ソート";
 
-"常规歌曲" = "常规歌曲";
-"传统活动" = "传统活动";
-"Groove活动" = "Groove活动";
-"最大难度" = "最大难度";
+"常规歌曲" = "通常曲";
+"传统活动" = "ｱﾀﾎﾟﾝ形式ｲﾍﾞﾝﾄ";
+"Groove活动" = "Grooveｲﾍﾞﾝﾄ";
+"最大难度" = "難易度";
 
+"已付声" = "ＣＶあり";
+"未付声" = "ＣＶなし";
+"年龄" = "年齢";
+"未知" = "未知";
+"血型" = "血液型";
+"身高" = "身長";
+"体重" = "体重";
+"五十音" = "五十音";
+"游戏编号" = "ゲーム内番号";
+"生日" = "誕生日";
