--- a/CGSSGuide/zh-Hant.lproj/Localizable.strings
+++ b/CGSSGuide/zh-Hant.lproj/Localizable.strings
@@ -467,17 +467,27 @@
 
 "已收藏" = "已收藏";
 "未收藏" = "未收藏";
-"更新时间" = "更新时间";
+"更新时间" = "更新時間";
 "稀有度" = "稀有度";
-"相册编号" = "相册编号";
+"相册编号" = "相簿編號";
 
 "降序" = "降序";
 "升序" = "升序";
-"筛选" = "筛选";
+"筛选" = "篩選";
 "排序" = "排序";
 
-"常规歌曲" = "常规歌曲";
-"传统活动" = "传统活动";
-"Groove活动" = "Groove活动";
-"最大难度" = "最大难度";
+"常规歌曲" = "常規歌曲";
+"传统活动" = "傳統活動";
+"Groove活动" = "Groove活動";
+"最大难度" = "最大難度";
 
+"已付声" = "已付聲";
+"未付声" = "未付聲";
+"年龄" = "年齡";
+"未知" = "未知";
+"血型" = "血型";
+"身高" = "身高";
+"体重" = "體重";
+"五十音" = "五十音";
+"游戏编号" = "遊戲編號";
+"生日" = "生日";
