--- a/CGSSGuide/en.lproj/Localizable.strings
+++ b/CGSSGuide/en.lproj/Localizable.strings
@@ -466,19 +466,29 @@
 "您也可以通过点击下方的广告来支持我们。" = "Click the ad. to support us.";
 "您的设备未开启应用内购买。" = "Your device do not allow in-app purchasing";
 
-"已收藏" = "已收藏";
-"未收藏" = "未收藏";
-"更新时间" = "更新时间";
-"稀有度" = "稀有度";
-"相册编号" = "相册编号";
+"已收藏" = "Favorited";
+"未收藏" = "Not Favorited";
+"更新时间" = "Update Time";
+"稀有度" = "Rarity";
+"相册编号" = "Album Order";
 
-"降序" = "降序";
-"升序" = "升序";
-"筛选" = "筛选";
-"排序" = "排序";
+"降序" = "Ascending";
+"升序" = "Descending";
+"筛选" = "Filter";
+"排序" = "Sort";
 
-"常规歌曲" = "常规歌曲";
-"传统活动" = "传统活动";
-"Groove活动" = "Groove活动";
-"最大难度" = "最大难度";
+"常规歌曲" = "Regular Songs";
+"传统活动" = "Token Event Songs";
+"Groove活动" = "Groove Songs";
+"最大难度" = "Maximum Difficulty";
 
+"已付声" = "Voiced";
+"未付声" = "Unvoiced";
+"年龄" = "Age";
+"未知" = "Unknown";
+"血型" = "Blood type";
+"身高" = "Height";
+"体重" = "Weight";
+"五十音" = "Alphabetically";
+"游戏编号" = "Character ID";
+"生日" = "Birthday";
